python-algo-def-4/errorFile111-08-2022-04-28-21-1660206501676-152339448.txt
  File "/home/eli/projects/c1-terminal/c1terminal-algo/python-algo-def-4/algo_strategy.py", line 110
    visited_points = dict{}
                         ^
SyntaxError: invalid syntax
